[package]
name = "nasdaq"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytes = "1.10"
zip = "0.6"
dotenv = "0.15"
futures = "0.3"
indicatif = "0.17"
polars = { version = "0.46", features = ["lazy", "csv", "decompress", "rolling_window", "round_series", "abs", "log", "ewma", "ipc", "parquet", "is_in", "semi_anti_join", "partition_by", "rank", "dynamic_group_by", "streaming"] }
duckdb = { version = "1.10502", features = ["bundled"] }
arrow = { version = "58.3.0", default-features = false, features = ["ipc"] }
chrono = { version = "0.4", default-features = true }
rayon = "1.10"
